--- a/src/main/resources/com/example/demo/ProfileYSNoAddFriend.fxml
+++ b/src/main/resources/com/example/demo/ProfileYSNoAddFriend.fxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="600.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.viewProfileYSController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="338.0" prefWidth="600.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.viewProfileYSControllerNoADD">
    <center>
-      <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="375.0" prefWidth="600.0" style="-fx-background-color: ffdde6;" BorderPane.alignment="CENTER_LEFT">
+      <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="338.0" prefWidth="600.0" style="-fx-background-color: ffdde6;" BorderPane.alignment="CENTER_LEFT">
          <children>
             <Label fx:id="usernameTitle" text="Label">
                <VBox.margin>
@@ -100,14 +99,6 @@
                   </Label>
                </children>
             </VBox>
-            <Button mnemonicParsing="false" onAction="#addFriend" style="-fx-background-radius: 20; -fx-background-color: f6adc6;" text="Add Friend" textFill="WHITE">
-               <VBox.margin>
-                  <Insets left="248.0" top="10.0" />
-               </VBox.margin>
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="14.0" />
-               </font>
-            </Button>
          </children>
          <BorderPane.margin>
             <Insets />
