--- a/src/main/resources/com/example/demo/personalProfilePa.fxml
+++ b/src/main/resources/com/example/demo/personalProfilePa.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="473.0" prefWidth="657.0" style="-fx-background-color: ffdde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.personalProfilePaController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="661.0" prefWidth="1049.0" style="-fx-background-color: ffdde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.personalProfilePaController">
    <children>
       <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;">
          <children>
@@ -154,13 +155,49 @@
             </Text>
             <Label fx:id="booking" text="Label">
                <VBox.margin>
-                  <Insets left="200.0" top="-27.0" />
+                  <Insets left="200.0" top="-15.0" />
                </VBox.margin>
             </Label>
          </children>
          <VBox.margin>
-            <Insets bottom="100.0" top="100.0" />
+            <Insets top="75.0" />
          </VBox.margin>
+      </VBox>
+      <VBox prefHeight="214.0" prefWidth="1050.0">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Add Children:">
+               <VBox.margin>
+                  <Insets left="360.0" top="20.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="15.0" />
+               </font>
+            </Text>
+            <Button mnemonicParsing="false" onAction="#viewProfile" prefHeight="23.0" prefWidth="90.0" style="-fx-background-color: e7accf; -fx-background-radius: 20;" text="View Profile" textFill="WHITE">
+               <VBox.margin>
+                  <Insets left="690.0" top="20.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="12.0" />
+               </font>
+            </Button>
+            <TextField fx:id="findChildren" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="315.0" promptText="Enter your children name here..." style="-fx-background-radius: 20; -fx-background-color: rgba(255,255,255,.5);">
+               <VBox.margin>
+                  <Insets left="360.0" top="-24.0" />
+               </VBox.margin>
+            </TextField>
+            <Button mnemonicParsing="false" onAction="#addChildren" style="-fx-background-color: cc3366; -fx-background-radius: 20;" text="Add Children" textFill="WHITE">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="790.0" top="-25.0" />
+               </VBox.margin>
+            </Button>
+         </children>
       </VBox>
    </children>
 </VBox>
