--- a/src/main/resources/com/example/demo/ProfilePa.fxml
+++ b/src/main/resources/com/example/demo/ProfilePa.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="600.0" style="-fx-background-color: ffdde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.viewProfilePaController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: ffdde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.viewProfilePaController">
    <children>
       <Label fx:id="usernameTitle" text="Label">
          <font>
@@ -24,7 +24,7 @@
             <Insets left="50.0" top="-35.0" />
          </VBox.margin>
       </Text>
-      <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="226.0" prefWidth="500.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+      <VBox fx:id="vbox" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Email">
                <font>
