--- a/src/main/resources/com/example/demo/personalProfilePa.fxml
+++ b/src/main/resources/com/example/demo/personalProfilePa.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -91,14 +92,14 @@
             </HBox>
          </children>
       </HBox>
-      <VBox fx:id="vbox" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300.0" prefWidth="815.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+      <VBox fx:id="vbox" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="900.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Email">
                <font>
                   <Font name="Arial Rounded MT Bold" size="15.0" />
                </font>
                <VBox.margin>
-                  <Insets left="40.0" top="40.0" />
+                  <Insets left="40.0" top="20.0" />
                </VBox.margin>
             </Text>
             <Label fx:id="email" text="Label">
@@ -124,7 +125,7 @@
                   <Font name="Arial Rounded MT Bold" size="15.0" />
                </font>
                <VBox.margin>
-                  <Insets left="40.0" top="60.0" />
+                  <Insets left="40.0" top="30.0" />
                </VBox.margin>
             </Text>
             <Label fx:id="role" text="Label">
@@ -160,17 +161,17 @@
             </Label>
          </children>
          <VBox.margin>
-            <Insets top="75.0" />
+            <Insets top="35.0" />
          </VBox.margin>
       </VBox>
-      <VBox prefHeight="214.0" prefWidth="1050.0">
+      <VBox prefHeight="94.0" prefWidth="1050.0">
          <VBox.margin>
-            <Insets />
+            <Insets top="30.0" />
          </VBox.margin>
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Add Children:">
                <VBox.margin>
-                  <Insets left="360.0" top="20.0" />
+                  <Insets left="362.0" top="10.0" />
                </VBox.margin>
                <font>
                   <Font name="Arial Rounded MT Bold" size="15.0" />
@@ -186,7 +187,7 @@
             </Button>
             <TextField fx:id="findChildren" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="315.0" promptText="Enter your children name here..." style="-fx-background-radius: 20; -fx-background-color: rgba(255,255,255,.5);">
                <VBox.margin>
-                  <Insets left="360.0" top="-24.0" />
+                  <Insets left="362.0" top="-24.0" />
                </VBox.margin>
             </TextField>
             <Button mnemonicParsing="false" onAction="#addChildren" style="-fx-background-color: cc3366; -fx-background-radius: 20;" text="Add Children" textFill="WHITE">
@@ -199,5 +200,128 @@
             </Button>
          </children>
       </VBox>
+      <ScrollPane hbarPolicy="NEVER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300.0" prefWidth="815.0" style="-fx-background-color: ffdde6; -fx-background-radius: 20;" vbarPolicy="ALWAYS">
+         <VBox.margin>
+            <Insets top="50.0" />
+         </VBox.margin>
+         <content>
+            <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300.0" prefWidth="815.0" style="-fx-background-color: ffdde6;">
+               <children>
+                  <VBox maxWidth="-Infinity" prefHeight="50.0" prefWidth="795.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="40.0" top="13.0" />
+                           </VBox.margin>
+                        </Text>
+                        <Button mnemonicParsing="false" onAction="#viewProfile1" style="-fx-background-radius: 20; -fx-background-color: e7accf;" text="View Profile" textFill="WHITE">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="14.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="675.0" top="-25.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                  </VBox>
+                  <VBox maxWidth="-Infinity" prefHeight="50.0" prefWidth="795.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="40.0" top="13.0" />
+                           </VBox.margin>
+                        </Text>
+                        <Button mnemonicParsing="false" onAction="#viewProfile1" style="-fx-background-radius: 20; -fx-background-color: e7accf;" text="View Profile" textFill="WHITE">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="14.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="675.0" top="-25.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <VBox maxWidth="-Infinity" prefHeight="50.0" prefWidth="795.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="40.0" top="13.0" />
+                           </VBox.margin>
+                        </Text>
+                        <Button mnemonicParsing="false" onAction="#viewProfile1" style="-fx-background-radius: 20; -fx-background-color: e7accf;" text="View Profile" textFill="WHITE">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="14.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="675.0" top="-25.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <VBox maxWidth="-Infinity" prefHeight="50.0" prefWidth="795.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="40.0" top="13.0" />
+                           </VBox.margin>
+                        </Text>
+                        <Button mnemonicParsing="false" onAction="#viewProfile1" style="-fx-background-radius: 20; -fx-background-color: e7accf;" text="View Profile" textFill="WHITE">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="14.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="675.0" top="-25.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <VBox maxWidth="-Infinity" prefHeight="50.0" prefWidth="795.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="40.0" top="13.0" />
+                           </VBox.margin>
+                        </Text>
+                        <Button mnemonicParsing="false" onAction="#viewProfile1" style="-fx-background-radius: 20; -fx-background-color: e7accf;" text="View Profile" textFill="WHITE">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="14.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="675.0" top="-25.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </VBox>
+               </children>
+            </VBox>
+         </content>
+      </ScrollPane>
    </children>
 </VBox>
